...
      },
    );
  }

  Widget _timeTextField() {
    return TextField(
      key: Key("TimeKey"),
      onTap: () async {
        TimeOfDay? picked = await showTimePicker(
          context: context,
          initialTime: TimeOfDay.now(),
          builder: (BuildContext context, Widget? child) {
            return MediaQuery(
...
      ),
    );
  }

  Widget _dateTextField() {
    return TextField(
      key: Key("DateKey"),
      onTap: () async {
        DateTime? pickedDate = await showDatePicker(
            context: context,
            initialDate: DateTime.now(), //get today's date
            firstDate: DateTime(
                2000), //DateTime.now() - not to allow to choose before today.
...
  Widget _serviceWidget({int? index, required Service service}) {
    return Row(
      children: [
        Expanded(
          flex: 2,
          child: TextField(
            key: Key('ProductKey'),
            controller: service.serviceNameController,
            decoration: InputDecoration(
              hintText: 'Product name',
            ),
          ),
        ),
        SizedBox(width: 10),
        Expanded(
          child: TextField(
            key: Key("QtyKey"),
            onChanged: ((value) => _calculateFinalSum()),
            controller: service.quantityController,
            decoration: InputDecoration(
              hintText: 'Qty',
            ),
          ),
        ),
        SizedBox(width: 10),
        Expanded(
          child: TextField(
            key: Key("PriceKey"),
            onChanged: (value) => _calculateFinalSum(),
            controller: service.priceController,
            decoration: InputDecoration(
              hintText: 'Price',
            ),
          ),
...
            decoration: BoxDecoration(
              color: Colors.orange,
              borderRadius: BorderRadius.all(Radius.circular(20)),
            ),
            child: Center(
              child: Text(
                'Add Product',
                style: TextStyle(color: Colors.white),
              ),
            ),
          ),
          onPressed: () {
            setState(() {
...
          decoration: BoxDecoration(
            color: Colors.orange,
            borderRadius: BorderRadius.all(Radius.circular(20)),
          ),
          child: Center(
              child: Text(
            'Save',
            style: TextStyle(color: Colors.white),
          )),
          width: 60,
          height: 30,
        ),
        onPressed: () async {
...
